--- a/2015-todo.md
+++ b/2015-todo.md
@@ -4,7 +4,7 @@ My professional growth goals for 2015.
 
 ### Write a Visual Studio Extension ###
 
-Find a pain point, and automate its solution. 
+Find a pain point within Visual Studio. Automate its solution. 
 
 - Code extraction to a new class/file. 
 - variable name de-Hungarian-ifyer.
@@ -17,6 +17,9 @@ Find a pain point, and automate its solution. Find a service with an API that yo
 
 - Mirth 3.0
 
+### Pick a Non-Bootstrap Blog Theme/Presentation###
+
+Bootstrap is too heavy. Perhaps [Pure CSS](http://purecss.io/).
 
 ### Learn and Build With a New Language ###
 
@@ -40,9 +43,9 @@ Most devs (right?) have a list somewhere of projects that they'd like to start.
 
 The saying *if you do it more than once, automate it* is the big motivator here. On a [recent ATP, they discussed desktop window management and organization](https://overcast.fm/podcasts/episode/2701876337436#t=5571), and that lead me to compare what other devs are doing with how I typically work. I realized I ought to be automating tasks more, and keeping my workstation more organized and tasks repeatable.
 
-I will continue to realize how great PowerShell is at performing these tasks in a Windows environment (i.e. Boxstarter, Chocolatey, etc.). I 
+PowerShell will be a large part of performing these types of tasks in a Windows environment (i.e. Boxstarter, Chocolatey, etc.).
 
-I'm using Git via [GitHub For Windows](https://windows.github.com/) and Visual Studio integration - mostly to local, BitBucket, and GitHub repos. I see devs writing how they go straight to the Git Shell, and kind of ignore IDE integration. I don't fully understand the reasons why. What am I missing? IDE source control integration is called a crutch, inflexible, etc. Maybe it's because I'm mostly using Visual Studio, and haven't stretched or exercised outside that IDE very much.  Maybe it's because I'm using VS so much that I haven't needed to learn basic Git CL commands. It's not like the integration is slowing me down and forcing me to use my mouse or something like that. I use keyboard shortcuts to access the integrated Git client. This reminded me of this [Hanselminutes podcast on DVCS at 28m mark ](http://hanselminutes.com/231/eric-sink-on-distributed-version-control-systems) where they comment that most programmers use source control either integrated or command-line, and rarely mix. Let's pretend both methods were functionally equivalent - what would the benefit of using the CL be over the IDE integration? Portability of skills?   
+I'm using Git via [GitHub For Windows](https://windows.github.com/) and Visual Studio integration - mostly to local, BitBucket, and GitHub repos. I see devs writing how they go straight to the Git Shell, and kind of ignore IDE integration. I don't fully understand the reasons why. What am I missing? IDE source control integration is called a crutch, inflexible, etc. Maybe it's because I'm mostly using Visual Studio, and haven't stretched or exercised outside that IDE very much.  Maybe it's because I'm using VS so much that I haven't needed to learn basic Git CL commands. It's not like the integration is slowing me down and forcing me to use my mouse or something like that. I use keyboard shortcuts to access the integrated Git client. This reminded me of this [Hanselminutes podcast on DVCS at the 28m mark](http://hanselminutes.com/231/eric-sink-on-distributed-version-control-systems) where they comment that most programmers use source control either integrated or command-line, and rarely mix. Let's pretend both methods were functionally equivalent - what would the benefit of using the CL be over the IDE integration? Portability of skills?   
 
 ### Test For Certification ###
 
